QShortcut: fix ambiguity with new PMF ctors

The new PMF ctors introduced with a4751f8824723acaee4b9d8aa78a59c2aa36cb3e
created some ambiguities with existing old-style connects. Fix it by
explitly checking if the given pointers are pointers from QObject
derived classes.

Fixes: QTBUG-82415
Change-Id: I70d51a6d50384fe6b5083fa3b94492ab6ed97086
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>